syntax = "proto3";

package backend;
option go_package = "panelium/proto_gen_go/backend";

import "common.proto";

service UserService {
  rpc CreateUser(UserData) returns (User);
  rpc ReadUser(common.SimpleIDMessage) returns (User);
  rpc ReadUserByUsername(common.SimpleMessage) returns (User);
  rpc ReadUserByEmail(common.SimpleMessage) returns (User);
  rpc UpdateUser(User) returns (common.SuccessMessage);
  rpc DeleteUser(common.SimpleIDMessage) returns (common.SuccessMessage);
  rpc ListUsers(common.Empty) returns (Users);
}

message UserData {
  string username = 1;
  string email = 2;
  bool mfa_needed = 3;
  bool admin = 4;
}

message User {
  string uid = 1;
  UserData data = 2;
}

message Users {
  repeated User users = 1;
}
